--- a/.editorconfig
+++ b/.editorconfig
@@ -25,7 +25,7 @@ indent_style = tab
 
 # Indentation override for all JS under lib directory
 
-[views/**.ejs]
+[**.ejs]
 indent_style = space
 indent_size = 2
 
