--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = false
-trim_trailing_whitespace = true
+# trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
