--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "jquery-tabledit": "jquery-tabledit#^1.2.3",
     "daterangepicker": "bootstrap-daterangepicker#^3.0.3",
     "bootstrap-datepicker": "^1.8.0",
-    "bootstrap3-typeahead": "^4.0.2"
+    "bootstrap3-typeahead": "^4.0.2",
+    "bootstrap-fileinput": "^5.0.1"
   }
 }
