--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "daterangepicker": "bootstrap-daterangepicker#^3.0.3",
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap3-typeahead": "^4.0.2",
-    "bootstrap-fileinput": "^5.0.1"
+    "bootstrap-fileinput": "^5.0.1",
+    "github-fork-ribbon-css": "^0.2.2"
   }
 }
