--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,15 @@
     "bootstrap3-typeahead": "^4.0.2",
     "bootstrap-fileinput": "^5.0.1",
     "github-fork-ribbon-css": "^0.2.2",
-    "sweetalert2": "^7.32.0"
+    "sweetalert2": "^7.32.0",
+    "iCheck": "^1.0.2",
+    "bootstrap-star-rating": "^4.0.5",
+    "bootstrap-tagsinput": "^0.8.0",
+    "bootstrap-switch": "^3.3.4",
+    "jquery_lazyload": "jquery.lazyload#^1.9.7",
+    "editor.md": "^1.5.0",
+    "chart.js": "^2.8.0",
+    "select2": "^4.0.5",
+    "dropify": "^0.2.2"
   }
 }
